--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "elr-converter",
-  "version": "1.0.0",
+  "name": "mileage-converter",
+  "version": "1.0.2",
   "description": "Translates between geospatial locations and mileages",
   "main": "server.js",
   "scripts": {
